fixed the spacing above video caption

--- a/pages/index.css
+++ b/pages/index.css
@@ -139,6 +139,11 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
+  padding-top: 24px;
+}
+
+.recipes__video-text {
+  margin: 0;
 }
 
 .recipes__iframe {
